<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <EditText
            android:id="@+id/plainTextEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/plain_text_to_encrypt"
            />

        <Button
            android:id="@+id/encryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/encrypt_with_biometrics"
            android:enabled="false"
            />

        <TextView
            android:id="@+id/ivTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="serif-monospace"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/initialization_vector"
            />

        <TextView
            android:id="@+id/cipherTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="serif-monospace"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:text="@string/cipher_text"
            />

        <Button
            android:id="@+id/decryptButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/decrypt_with_biometrics"
            android:enabled="false"
            />

        <TextView
            android:id="@+id/plainTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            tools:text="Plain text"
            />

    </LinearLayout>

</ScrollView>
